# actix-web-app

./: .env  Cargo.toml
src/: database.rs  handlers.rs  main.rs  templates.rs
src/database/: models.rs  validators.rs
src/handlers/: validators.rs
static/css/: style.css
templates/: 404.html.hbs  articles.html.hbs  base.html.hbs  index.html.hbs  signup.html.hbs
