[package]
name = "actix-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
handlebars = "4.1.3"
actix-files = "0.6.0-beta.8"
env_logger = "0.9.0"
dotenv = "0.15"
serde = "1.0.130"
deadpool-postgres = "0.10.0"
sqlx = { version = "0.5.9", features = ["postgres", "uuid", "runtime-actix-native-tls"] }
actix-rt = "2.4.0"
sha2 = "0.9.8"